--- a/src/components/home/HappyStart.scss
+++ b/src/components/home/HappyStart.scss
@@ -29,3 +29,11 @@
     padding: 0 8rem 4rem;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .HappyStart {
+    img {
+      width: 200%;
+    }
+  }
+}
