--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -3,8 +3,8 @@
 .AboutUS {
   padding: 3% 5% 3%;
   * {
-    margin: 0;
-    padding: 0;
+    // margin: 0;
+    // padding: 0;
     box-sizing: border-box;
     font-family: Roboto;
     font-style: normal;
